# utec-planificador-ai

./: .dockerignore  .env.example  .gitignore  API_ENDPOINTS.md  Dockerfile  GUIA_COMPLETA_CON_GPT.md  LIMPIEZA_SESIONES.md  SEGURIDAD_CHATBOT.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  readme.md  requerimientos.md
app/: __init__.py  config.py  main.py
app/api/: __init__.py  chatbot_controller.py  report_controller.py  suggestion_controller.py
app/api/schemas/: __init__.py  chat_dto.py  planificacion_dto.py  planification_dto.py  report_dto.py  suggestion_dto.py
app/graph/: __init__.py  chatbot_graph.py  utils.py
app/graph/schema/: __init__.py  chat_state.py
app/graph/tool/: __init__.py  pedagogical_help_tool.py  planificacion_analysis_tool.py
app/service/: __init__.py  chatbot_service.py  report_service.py  suggestion_service.py
app/utils/: __init__.py  enum_descriptions.py
scripts/: logs.ps1  start.ps1  status.ps1  stop.ps1
